welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:2: error: type mismatch;
 found   : Int(7)
 required: Boolean
  if (talking==true && 0<=hour<=7) {
                                ^parotTrouble:4: error: type mismatch;
 found   : Int(0)
 required: Boolean
  } else if (talking==true && 20<=hour<=0) {
                                        ^